--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h2>테스트용 프로젝트입니다</h2>
+<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdQgYtU%2FbtqVe8WNkSr%2F18o2eEG2sXHkZR3T2TZl81%2Fimg.png">
 
 </body></html>
